--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/mathjs": "^5.0.1",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
+    "mathjs": "^5.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
