--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,9 @@
         "singleline": { "delimiter": "comma", "requireLast": false }
       }
     ],
+    "@typescript-eslint/no-object-literal-type-assertion": ["warn",
+      { "allowAsParameter": true }
+    ],
     "semi": "error",
     "eqeqeq": "error",
     "no-console": "warn"
