--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
     "build": "webpack --mode production",
     "start": "webpack-dev-server --watch-content-base --content-base public",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
-    "test": "jest"
+    "test": "ts-node -O '{\"module\":\"commonjs\"}' node_modules/tape/bin/tape src/**/*.test.ts"
   },
   "dependencies": {
     "@types/mathjs": "^5.0.1",
-    "@types/react": "^16.8.17",
+    "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "mathjs": "^5.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.13",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-react": "^7.13.0",
-    "jest": "^24.8.0",
-    "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.0",
-    "typescript": "^3.4.5",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1"
+    "@types/tape": "^4.2.33",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "eslint": "^6.0.1",
+    "eslint-plugin-react": "^7.14.2",
+    "tape": "^4.11.0",
+    "ts-loader": "^6.0.4",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.3",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   }
 }
