--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack-dev-server --watch-content-base --content-base public",
-    "lint": "eslint 'src/**/*.{ts,tsx}'",
+    "lint": "eslint --ext js,ts,tsx src",
     "test": "ts-node -O '{\"module\":\"commonjs\"}' node_modules/tape/bin/tape src/**/*.test.ts"
   },
   "dependencies": {
