--- a/package.json
+++ b/package.json
@@ -7,30 +7,30 @@
   "private": true,
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --watch-content-base --content-base public",
+    "start": "webpack serve --watch-content-base --content-base public",
     "lint": "eslint --ext js,ts,tsx src",
     "test": "ts-node -O '{\"module\":\"commonjs\"}' node_modules/tape/bin/tape src/**/*.test.ts"
   },
   "dependencies": {
-    "@types/mathjs": "^6.0.5",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
-    "mathjs": "^7.2.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "@types/mathjs": "^6.0.12",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.5",
+    "mathjs": "^9.4.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/tape": "^4.13.0",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
-    "eslint": "^7.9.0",
-    "eslint-plugin-react": "^7.20.6",
-    "tape": "^5.0.1",
-    "ts-loader": "^8.0.3",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
+    "eslint": "^7.26.0",
+    "eslint-plugin-react": "^7.23.2",
+    "tape": "^5.2.2",
+    "ts-loader": "^9.1.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
